--- a/Makefile.in
+++ b/Makefile.in
@@ -1,8 +1,5 @@
 default: k8s-init
 
-test:
-	@echo "ENV variables ${CLUSTER_NAME}"
-
 tfplan.out:
 	terraform init -input=false
 	terraform plan \
@@ -70,7 +67,7 @@ k8s-init: cluster.yaml kops-s3-replace kops-create-secret kops-update
 
 k8s-upgrade: kops-update kops-update-yes kops-rolling-update kops-rolling-update-yes
 
-all: k8s-init kops-update-yes
+all: k8s-init kops-update-yes kops-export
 
 clean:
 	rm -rf .terraform
